--- a/notebooks/xgboost_stacked.ipynb
+++ b/notebooks/xgboost_stacked.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,6 +353,59 @@
     "rus = RandomUnderSampler(random_state=0, sampling_strategy='majority')\n",
     "X_train, y_train = rus.fit_resample(X_train, y_train)\n",
     "print(Counter(y_train))\n",
+    "\n",
+    "model = xgb.XGBClassifier()\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "y_test = label_encoder.inverse_transform(y_test)\n",
+    "predictions = label_encoder.inverse_transform(predictions)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({0: 100289, 1: 100289})\n",
+      "Accuracy: 0.8127679728786519\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.79      0.81     20028\n",
+      "           1       0.80      0.84      0.82     20088\n",
+      "\n",
+      "    accuracy                           0.81     40116\n",
+      "   macro avg       0.81      0.81      0.81     40116\n",
+      "weighted avg       0.81      0.81      0.81     40116\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing \n",
+    "label_encoder = preprocessing.LabelEncoder() \n",
+    "  \n",
+    "# Encode labels in column 'species'. \n",
+    "y_labeled = label_encoder.fit_transform(y_stacked)\n",
+    "\n",
+    "rus = RandomUnderSampler(random_state=0, sampling_strategy='majority')\n",
+    "X_un, y_un = rus.fit_resample(X, y_labeled)\n",
+    "print(Counter(y_un))\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_un, y_un, test_size=0.2, random_state=42)\n",
     "\n",
     "model = xgb.XGBClassifier()\n",
     "\n",
